manifests/kafka-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kafka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: kcluster
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
